package nl.thijsdewitt.han_bomber_knights.scenes;

import com.github.hanyaeger.api.scenes.DynamicScene;

public class GameScene extends DynamicScene {
    @Override
    public void setupScene() {

    }

    @Override
    public void setupEntities() {

    }
}
