package nl.thijsdewitt.han_bomber_knights.scenes;

import com.github.hanyaeger.api.scenes.StaticScene;

public class WinScreen extends StaticScene {
    @Override
    public void setupScene() {

    }

    @Override
    public void setupEntities() {

    }
}
